--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,7 @@
     * {
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+	tap-highlight-color: rgba(0, 0, 0, 0);
     }
     
     #preload-01 {
