--- a/css/screen.css
+++ b/css/screen.css
@@ -1,244 +1,590 @@
-    * {
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-        -moz-tap-highlight-color: rgba(0, 0, 0, 0);
-        tap-highlight-color: rgba(0, 0, 0, 0);
+* {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+    tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+#preload-01 {
+    background: url(../images/basicbellamy.png) no-repeat -9999px -9999px;
+}
+
+#preload-02 {
+    background: url(../images/basicallybellamy2.png) no-repeat -9999px -9999px;
+}
+
+#preload-03 {
+    background: url(../images/plectrum.png) no-repeat -9999px -9999px;
+}
+
+body {
+    background-color: #000000;
+    /*    overflow: hidden;*/
+    font-size: 1.3em;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                  not supported by any browser */
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    min-width: 1400px;
+}
+
+img {
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+#info {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: white;
+    width: 120px;
+    z-index: 9999;
+}
+
+#infoplectrum {
+    width: 29px;
+    display: inline;
+    float: left;
+    margin-top: 4px;
+    margin-left: 36px
+}
+
+#infomorgan {
+    width: 35px;
+    display: inline;
+    float: left;
+    margin-left: 14px;
+    animation-timing-function: linear;
+    animation-duration: .8s;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite;
+}
+
+#score {
+    display: block;
+    text-align: right;
+    margin: 20px 10px
+}
+
+#hp {
+    display: block;
+    text-align: right;
+    margin: 20px 10px;
+    height: 40px;
+}
+
+.hp {
+    width: 20px;
+    margin: 2px;
+    display: inline-block;
+    float: right;
+}
+
+#reload {
+    width: 10px;
+    height: 100px;
+    display: block;
+    float: right;
+    margin: 5px 17px;
+    border: 1px solid white;
+    border-radius: 3px;
+    /*        background: linear-gradient(to top, #ffffff 0%, rgba(255, 255, 255, 0) 0%);*/
+    position: relative;
+    overflow: hidden;
+}
+
+#reloadanimationbar {
+    width: 100%;
+    height: 0%;
+    border-radius: 3px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+}
+
+.reloadanimation {
+    animation-name: reloadbar;
+    animation-timing-function: linear;
+    animation animation-iteration-count: 1;
+    animation-duration: 1.45s;
+}
+
+@keyframes reloadbar {
+    from {
+        transform: scale(1);
+        height: 100%
     }
-    
-    #preload-01 {
-        background: url(../images/basicbellamy.png) no-repeat -9999px -9999px;
-    }
-    
-    #preload-02 {
-        background: url(../images/basicallybellamy2.png) no-repeat -9999px -9999px;
-    }
-    
-    #preload-03 {
-        background: url(../images/plectrum.png) no-repeat -9999px -9999px;
-    }
-    
-    body {
-        background-color: black;
-        overflow: hidden;
-    }
-    
-    #info {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        color: white;
-        width: 80px;
-        z-index: 9999;
-    }
-    
-    #score {
-        display: block;
-        text-align: right;
-        margin: 20px 10px
-    }
-    
-    #hp {
-        display: block;
-        text-align: right;
-        margin: 20px 10px
-    }
-    
-    #reload {
-        width: 10px;
-        height: 100px;
-        display: block;
-        float: right;
-        margin: 5px 10px;
-        border: 1px solid white;
-        border-radius: 3px;
-        /*        background: linear-gradient(to top, #ffffff 0%, rgba(255, 255, 255, 0) 0%);*/
-        position: relative;
-        overflow: hidden;
-    }
-    
-    #reloadanimationbar {
-        width: 100%;
+    to {
+        transform: scale(1.2);
         height: 0%;
-        border-radius: 3px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        background-color: #fff;
+    }
+}
+
+#morganmeter {
+    width: 10px;
+    height: 100px;
+    display: block;
+    float: right;
+    margin: 5px 17px;
+    border: 1px solid white;
+    border-radius: 3px;
+    /*        background: linear-gradient(to top, #ffffff 0%, rgba(255, 255, 255, 0) 0%);*/
+    position: relative;
+    overflow: hidden;
+}
+
+#morganbar {
+    width: 100%;
+    height: 0%;
+    border-radius: 3px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+    transition: .2s ease;
+}
+
+#canvas {
+    width: 1400px;
+    height: 800px;
+    background-color: #eaeaea;
+    position: relative;
+    transform: translate(-50%, 0%);
+    left: 50%;
+    top: 50%;
+    background-image: url(../images/stage.jpg);
+    overflow: hidden;
+    margin-top: 70px;
+    margin-bottom: 110px;
+}
+
+#reddit {
+    float: right;
+    background-color: #ffffff;
+}
+
+#faq {
+    float: left;
+    color: white;
+    width: 700px;
+}
+
+#vol {
+    position: absolute;
+    z-index: 99999;
+    left: 20px;
+    top: 20px;
+    cursor: pointer;
+}
+
+.big {
+    text-transform: uppercase;
+    font-size: 1.1em;
+    margin-bottom: 15px;
+    display: block;
+}
+
+p {
+    line-height: 1.1em;
+    font-size: 0.8em;
+    margin-bottom: 10px;
+}
+
+#contain {
+    width: 1400px;
+    margin: auto;
+    display: block;
+    margin-bottom: 100px;
+    overflow: hidden;
+}
+
+#overlay {
+    z-index: 5;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#info2 {
+    width: 300px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 35%;
+    z-index: 99
+}
+
+#play {
+    padding: 20px;
+    font-size: 1.5em;
+    background-color: #fff;
+    overflow: hidden;
+    display: inline-block;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    border-radius: 5px;
+    color: #3b3b3b;
+    cursor: pointer;
+}
+
+#play:hover {
+    background-color: #fffac0;
+}
+
+#scoreafter {
+    display: block;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: white;
+    top: -100px;
+    font-size: 1.3em;
+    color: white;
+}
+
+#killed {
+    display: block;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: white;
+    top: -160px;
+    font-size: 1.3em;
+    color: #fffac0;
+}
+
+#highscoreafter {
+    display: block;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: white;
+    top: -65px;
+    font-size: 0.9em;
+    color: white;
+}
+
+#frontstage {
+    position: absolute;
+    left: 0;
+    z-index: 9;
+}
+
+#lights {
+    position: absolute;
+    left: 0;
+    z-index: -9;
+    animation: shine 5s ease;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite;
+    width: 100%;
+}
+
+#spl {
+    position: absolute;
+    left: 70px;
+    bottom: -150px;
+    z-index: -8;
+    /*    width: 100%;*/
+    height: 120%;
+    border: none;
+    opacity: 0.5;
+}
+
+#bellamy {
+    position: absolute;
+    z-index: 0;
+    bottom: 17px;
+    width: 100px;
+}
+
+#morgan {
+    position: absolute;
+    z-index: -1;
+    bottom: -90px;
+    left: 210px;
+    width: 120px;
+    transition: 1s ease;
+}
+
+.drone {
+    animation-name: dronemove;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    width: 100px;
+    left: -120px;
+    top: 30px;
+    position: absolute;
+    z-index: 10
+}
+
+.droneright {
+    animation-name: dronemoveright;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    width: 100px;
+    left: 1405px;
+    top: 30px;
+    position: absolute;
+    z-index: 10
+}
+
+width: 200px;
+
+}
+.bomb {
+    top: 35px;
+    background-color: #ff0000;
+    animation-name: bombdrop;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    position: absolute;
+    z-index: 8;
+    width: 10px;
+}
+.plectrum {
+    width: 20px;
+    bottom: 270px;
+    position: absolute;
+    /*    animation-name: spin, plectrumleft;*/
+    
+    animation-duration: 1.45s;
+    /*    animation-duration: 1s, 1.45s;*/
+    
+    animation-iteration-count: 1;
+    /*    animation-iteration-count: infinite, 1;*/
+    
+    animation-timing-function: linear;
+    /*    animation-timing-function: linear, linear;*/
+    
+    z-index: 10;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
     }
     
-    .reloadanimation {
-        /*        animation: reloadbar .5s 1;*/
-        animation-name: reloadbar;
-        animation-timing-function: linear;
-        animation animation-iteration-count: 1;
-        animation-duration: 0.8s;
+    to {
+        transform: rotate(360deg);
+    }
+}
+#bellamy {
+    position: absolute;
+    z-index: 0;
+    bottom: 17px;
+    width: 160px;
+    animation: MoveUpDown .6s ease-in-out infinite;
+    animation-direction: alternate-reverse;
+}
+@keyframes MoveUpDown {
+    0 {
+        bottom: 10px;
     }
     
-    @keyframes reloadbar {
-        from {
-            transform: scale(1);
-            height: 100%
-        }
-        to {
-            transform: scale(1.2);
-            height: 0%;
-        }
+    100% {
+        bottom: 20px;
+        width: 162px;
+    }
+}
+@keyframes shine {
+    0 {
+        opacity: 0.6
     }
     
-    #morganmeter {
-        width: 10px;
-        height: 100px;
-        display: block;
-        float: right;
-        margin-left: 5px;
-        margin-right: 10px;
-        margin: 5px 10px;
-        border: 1px solid white;
-        border-radius: 3px;
-        background: linear-gradient(to top, #ffffff 0%, rgba(255, 255, 255, 0) 0%);
+    20% {
+        opacity: 1
     }
     
-    #canvas {
-        width: 1400px;
-        height: 800px;
-        background-color: #eaeaea;
-        position: absolute;
-        transform: translate(-50%, -50%);
-        left: 50%;
-        top: 50%;
-        background-image: url(../images/stage.jpg);
-        overflow: hidden;
+    40% {
+        opacity: 0.5
     }
     
-    #frontstage {
-        position: absolute;
-        left: 0;
-        z-index: 9;
+    50% {
+        opacity: 1
     }
     
-    #lights {
-        position: absolute;
-        left: 0;
-        z-index: 100;
-        animation: shine 5s ease;
-        animation-direction: alternate-reverse;
-        animation-iteration-count: infinite;
+    70% {
+        opacity: 0.4
     }
     
-    #bellamy {
-        position: absolute;
-        z-index: 0;
-        bottom: 17px;
-        width: 200px;
+    90% {
+        opacity: 0.7
     }
     
-    .drone {
-        top: 0;
-        animation-name: dronemove;
-        animation-iteration-count: 1;
-        animation-timing-function: linear;
-        width: 100px;
+    100% {
+        opacity: 1
+    }
+}
+@keyframes dronemove {
+    0% {
         left: -120px;
-        top: 30px;
-        position: absolute;
-        z-index: 10
+        transform: translateY(5px);
+        height: 70px;
     }
     
-    .plectrum {
-        width: 20px;
-        bottom: 270px;
-        position: absolute;
-        animation-name: spin;
-        animation-duration: 1s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-        z-index: 10
+    10% {
+        transform: translateY(-5px)
     }
     
-    @keyframes spin {
-        from {
-            transform: rotate(0deg);
-        }
-        to {
-            transform: rotate(360deg);
-        }
+    20% {
+        transform: translateY(5px);
     }
     
-    #bellamy {
-        position: absolute;
-        z-index: 0;
-        bottom: 17px;
-        width: 200px;
-        animation: MoveUpDown .6s ease-in-out infinite;
-        animation-direction: alternate-reverse;
+    30% {
+        transform: translateY(-5px);
+        height: 55px;
     }
     
-    @keyframes MoveUpDown {
-        0 {
-            bottom: 10px;
-        }
-        100% {
-            bottom: 20px;
-            width: 203px;
-        }
+    40% {
+        transform: translateY(5px);
     }
     
-    @keyframes shine {
-        0 {
-            opacity: 0.6
-        }
-        20% {
-            opacity: 1
-        }
-        40% {
-            opacity: 0.5
-        }
-        50% {
-            opacity: 1
-        }
-        70% {
-            opacity: 0.4
-        }
-        90% {
-            opacity: 0.7
-        }
-        100% {
-            opacity: 1
-        }
+    50% {
+        transform: translateY(-5px)
     }
     
-    @keyframes dronemove {
-        0% {
-            left: -120px;
-            transform: translateY(5px)
-        }
-        10% {
-            transform: translateY(-5px)
-        }
-        20% {
-            transform: translateY(5px)
-        }
-        30% {
-            transform: translateY(-5px)
-        }
-        40% {
-            transform: translateY(5px)
-        }
-        50% {
-            transform: translateY(-5px)
-        }
-        60% {
-            transform: translateY(5px)
-        }
-        70% {
-            transform: translateY(-5px)
-        }
-        80% {
-            transform: translateY(5px)
-        }
-        90% {
-            transform: translateY(-5px)
-        }
-        100% {
-            left: 1400px;
-        }
+    60% {
+        transform: translateY(5px);
+        height: 70px;
     }
+    
+    70% {
+        transform: translateY(-5px)
+    }
+    
+    80% {
+        transform: translateY(5px);
+    }
+    
+    90% {
+        transform: translateY(-5px)
+    }
+    
+    100% {
+        left: 1405px;
+        height: 55px;
+    }
+}
+@keyframes dronemoveright {
+    0% {
+        left: 1405px;
+        transform: translateY(5px);
+        height: 70px;
+    }
+    
+    10% {
+        transform: translateY(-5px)
+    }
+    
+    20% {
+        transform: translateY(5px);
+    }
+    
+    30% {
+        transform: translateY(-5px);
+        height: 55px;
+    }
+    
+    40% {
+        transform: translateY(5px);
+    }
+    
+    50% {
+        transform: translateY(-5px)
+    }
+    
+    60% {
+        transform: translateY(5px);
+        height: 70px;
+    }
+    
+    70% {
+        transform: translateY(-5px)
+    }
+    
+    80% {
+        transform: translateY(5px);
+    }
+    
+    90% {
+        transform: translateY(-5px)
+    }
+    
+    100% {
+        left: -125px;
+        height: 55px;
+    }
+}
+@keyframes bombdrop {
+    0% {
+        top: 35px;
+        transform: rotate(-90deg);
+    }
+    
+    100% {
+        top: 720px;
+        transform: rotate(0)
+    }
+}
+@keyframes bombdropright {
+    0% {
+        top: 35px;
+        transform: rotate(90deg);
+    }
+    
+    100% {
+        top: 720px;
+        transform: rotate(0)
+    }
+}
+@keyframes plectrumleft {
+    0% {
+        transform: translateX(0) rotate(20deg);
+    }
+    
+    100% {
+        transform: translateX(-200px) rotate(-800deg);
+    }
+}
+@keyframes plectrumright {
+    0% {
+        transform: translateX(0px) rotate(20deg);
+    }
+    
+    100% {
+        transform: translateX(200px) rotate(800deg);
+    }
+}
+@keyframes pulsate {
+    0% {
+        transform: scale(0.9, 0.9);
+    }
+    
+    50% {}
+    
+    100% {
+        transform: scale(1.1, 1.1);
+    }
+}
